apps/web-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
  # deployment is namespace independent. Include namespace-specific config in nginx-conf-cm
  labels:
    app: nginx-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
      - name: nginx-web
        image: nginx:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /etc/nginx/nginx.conf
            name: nginx-web-conf-volume
            readOnly: true
            subPath: nginx.conf
          - mountPath: /etc/localtime
            name: tz-seoul
      - name: netshoot
        image: nicolaka/netshoot:latest
        command: [ "sleep", "infinity" ] # Keeps the container running
        imagePullPolicy: IfNotPresent
        # Optional: Add resources or limits if needed
        volumeMounts:
        - name: netshoot-web-conf-volume
          mountPath: /root/.curlrc
          subPath: .curlrc
      volumes:
        - name: nginx-web-conf-volume
          configMap:
            name: nginx-web-conf-cm
        - name: netshoot-web-conf-volume
          configMap:
            name: netshoot-web-conf-cm
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
---
apiVersion: v1
kind: Service
metadata:
  name: web-nginx-svc
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nginx-web
