apps/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-http-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.201
  gatewayClassName: f5-gateway-class
  listeners:
  - name: nginx 
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app
  namespace: web 
spec:
  parentRefs:
  - name: web-http-gw
    sectionName: nginx
  rules:
  - matches:
    - headers:
      - name: "Host"
        value: "www.f5bnk.com"
    backendRefs:
    - name: web-nginx-svc
      namespace: web 
      port: 80
  - matches:
    - headers:
      - name: "Host"
        value: "api.f5bnk.com"
    backendRefs:
    - name: httpbin
      namespace: web
      port: 8080
  - matches:
    - headers:
      - type: Exact
        name: env
        value: f5bnk
    backendRefs:
    - name: web-nginx-svc
      namespace: web
      port: 80
